cell02 ex00 fin

--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -1,78 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 00: Improved Responsive</title>
-    <link rel="stylesheet" href="responsive.css">
+  <meta charset="UTF-8">
+  <title>Responsive Table</title>
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <header>
-        <h1>Exercise 00: Improved responsive</h1>
-    </header>
 
-    <main>
-        <div class="exercise-info">
-            <table>
-                <thead>
-                    <tr>
-                        <th colspan="2">Exercise 00</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="2">Improved responsive</td>
-                    </tr>
-                    <tr>
-                        <td>Turn-in directory :</td>
-                        <td>ex00/</td>
-                    </tr>
-                    <tr>
-                        <td>Files to turn in :</td>
-                        <td>responsive.html responsive.css</td>
-                    </tr>
-                    <tr>
-                        <td>Allowed functions :</td>
-                        <td>None</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+  <table>
+    <tr>
+      <td class="cell1">Cell 1</td>
+      <td class="cell2">Cell 2</td>
+      <td class="cell3">Cell 3</td>
+      <td class="cell4">Cell 4</td>
+      <td class="cell5">Cell 5</td>
+    </tr>
+  </table>
 
-        <p>Copy your table from the cell1-5 and make it responsive to the browser resizing. The table must shrink to cover your entire web page. Do as you wish but do not listen to the Javascript pros that will say that it can't be done without it. Stay on CSS.</p>
-
-        <div class="warning-box">
-            <p><img src="warning.png" alt="Warning icon"> Warning You will have to split your files today!</p>
-        </div>
-
-        <div class="responsive-table-container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Header 1</th>
-                        <th>Header 2</th>
-                        <th>Header 3</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Data 1.1</td>
-                        <td>Data 1.2</td>
-                        <td>Data 1.3</td>
-                    </tr>
-                    <tr>
-                        <td>Data 2.1</td>
-                        <td>Data 2.2</td>
-                        <td>Data 2.3</td>
-                    </tr>
-                    <tr>
-                        <td>Data 3.1</td>
-                        <td>Data 3.2</td>
-                        <td>Data 3.3</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </main>
 </body>
 </html>
