--- a/cell04/resume1.html
+++ b/cell04/resume1.html
@@ -44,13 +44,13 @@
 
   <h4>YouTube Videos</h4> <div class="youtube-thumbnail-slider">
     <a href="https://youtu.be/OQKzZ_kt-Bo?si=cLre7OS7xkYvYdwd" target="_blank">
-      <img src="https://i9.ytimg.com/vi_webp/OQKzZ_kt-Bo/mqdefault.webp?v=67e6b4f4&sqp=CJSUzsIG&rs=AOn4CLBQTz0DxR22_RUez1iMir6epIjwzg" alt="YouTube Video 1" />
+      <img src="https://img.youtube.com/vi/OQKzZ_kt-Bo/hqdefault.jpg" alt="YouTube Video 1" />
     </a>
     <a href="https://youtu.be/QHwY2-0SmMQ" target="_blank">
-      <img src="https://i9.ytimg.com/vi/QHwY2-0SmMQ/mqdefault.jpg?v=6506c08b&sqp=CJSUzsIG&rs=AOn4CLCodEeMOwH1QrTLx9BpL9klPMhVMw" alt="YouTube Video 2" />
+      <img src="https://img.youtube.com/vi/QHwY2-0SmMQ/hqdefault.jpg" alt="YouTube Video 2" />
     </a>
     <a href="https://youtu.be/WCPl25mnpmU" target="_blank">
-      <img src="https://i9.ytimg.com/vi_webp/WCPl25mnpmU/mqdefault.webp?v=65cf3829&sqp=CMCWzsIG&rs=AOn4CLA_h9eYB1OHn_tQAPvi0YFw8fE6cg" alt="YouTube Video 3" />  
+      <img src="https://img.youtube.com/vi/WCPl25mnpmU/hqdefault.jpg" alt="YouTube Video 3" />  
     </a>
     </div>
 
